now all pages not visible are hidden, avoiding scrolling to other pages in IE and making everything a little smoother

--- a/static/sass/screen.sass
+++ b/static/sass/screen.sass
@@ -1,5 +1,4 @@
 body
-        overflow-x: visible
         overflow-y: scroll
         z-index: 0
         font-size: 20px
